# web-cacluator_wasm_rust

./: .gitignore  Cargo.toml  build.ps1
.github/workflows/: deploy.yaml
pkg/: LICENSE-MIT  README.md  highlight.css  main.css  main.html  main.mjs  package.json  web_caculator_rust_wasm.d.ts  web_caculator_rust_wasm.js  web_caculator_rust_wasm_bg.wasm  web_caculator_rust_wasm_bg.wasm.d.ts
src/: lib.rs  my_math.rs  my_parser.rs  my_runtime.rs
src/my_math/: my_functions.rs
test/: test_calc.rs
