[package]
name = "web-caculator_rust_wasm"
version = "0.1.0"
authors = ["Wu-Yijun <wuyijun21@mails.ucas.ac.cn>"]
edition = "2021"
description = "A simple calculator implemented in Rust and compiled to WebAssembly."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Wu-Yijun/web-cacluator_wasm_rust"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "*", optional = true }

js-sys = "*"

# getrandom = { version = "*", features = ["js"] }
# rand = "*"

[dev-dependencies]
wasm-bindgen-test = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"

[profile.dev]
debug = true
opt-level = 0

[[test]]
path = "test/test_calc.rs"
name = "test_calc"